@@ -5,6 +5,3 @@ author = Riverbank Computing Limited
 author_email = info@riverbankcomputing.com
 url = https://www.riverbankcomputing.com/software/sip/
 platforms = X11, macOS, Windows
-
-[bdist_wheel]
-py_limited_api = cp37
