@@ -1,4 +1,4 @@
-# Copyright (c) 2022, Riverbank Computing Limited
+# Copyright (c) 2023, Riverbank Computing Limited
 # All rights reserved.
 #
 # This copy of SIP is licensed for use under the terms of the SIP License
@@ -40,6 +40,6 @@ setup(
         name='@SIP_MODULE_PROJECT_NAME@',
         version='@SIP_MODULE_VERSION@',
         license='SIP',
-        python_requires='>=3.7',
+        python_requires='>=3.8',
         ext_modules=[module]
      )
