@@ -24,8 +24,8 @@
 #include <Python.h>
 
 /* Sanity check on the Python version. */
-#if PY_VERSION_HEX < 0x03070000
-#error "This version of @_SIP_MODULE_FQ_NAME@ requires Python v3.7 or later"
+#if PY_VERSION_HEX < 0x03080000
+#error "This version of @_SIP_MODULE_FQ_NAME@ requires Python v3.8 or later"
 #endif
 
 
@@ -45,12 +45,15 @@ extern "C" {
 
 /* The version of the ABI. */
 #define SIP_ABI_MAJOR_VERSION       13
-#define SIP_ABI_MINOR_VERSION       6
+#define SIP_ABI_MINOR_VERSION       7
 #define SIP_MODULE_PATCH_VERSION    0
 
 
 /*
  * The change history of the ABI.
+ *
+ * v13.7
+ *  - Python v3.8 or later is required.
  *
  * v13.6
  *  - Added support for Python v3.12.
